--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/fi6/kbotify-template#readme",
   "dependencies": {
-    "kbotify": "^0.2.5"
+    "chatgpt": "^2.0.5",
+    "kbotify": "^0.2.5",
+    "openai": "^3.1.0",
+    "ts-node": "^10.9.1",
+    "ts-register": "^0.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
