--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
             "emitDecoratorMetadata": true,
             "experimentalDecorators": true,
             "target": "es2020",
-            "module": "CommonJS",
-            "moduleResolution": "node",
+            "module": "node16",
+            // "module": "es2020",
+            "moduleResolution": "node16",
             "lib": [
                 "es2020"
             ],
@@ -38,7 +39,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "target": "es2020",
-        "module": "commonjs",
+        "module": "node16",
         "moduleResolution": "node",
         "lib": [
             "es2020"
