--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node --nolazy -r ts-node/register -r tsconfig-paths/register src/index.ts",
-    "pm2": "pm2 start src/pm2-windows.js --name='kook-pixiv-chan'"
+    "pm2": "pm2 start src/pm2-windows.js --name='kook-chatGPT'"
   },
   "repository": {
     "type": "git",
