--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Hexona69/kook-chatGPT#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "chatgpt": "^5.0.4",
     "delay": "^5.0.0",
     "kasumi.js": "^0.1.13",
